--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <h2>🧁 Капкейки</h2>
   <div class="product">
-    <img src="https://via.placeholder.com/150" alt="капкейк">
+    <img src="https://static.1000.menu/img/content-v2/97/58/18115/klassicheskie-kapkeiki_1664084138_23_max.jpg" alt="капкейк">
     <p>Ванильный капкейк – 300₽</p>
     <button onclick="buy()">Купить</button>
   </div>
